--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     .head{
         display: flex;
         flex-direction: row;
-        gap: 250px;
+        gap: 440px;
         align-items: center;
         justify-content: center;
         padding: 30px;
@@ -49,6 +49,10 @@
         border-radius: 50px;
         padding: 15px;
         width: 150px;
+        color: hsl(220, 16%, 96%);
+        font-family: "Public Sans", sans-serif;
+        font-weight: 400;
+        font-size: 15px;
     }
     
     .hero{
@@ -79,10 +83,21 @@
         margin-bottom: 500px;
     }
 
+    .hero-copy h1{
+        font-family: "Public Sans", sans-serif;
+        font-weight: 700;
+        font-size: 40px;
+    }
+
+    .hero-copy p{
+        font-family: "Public Sans", sans-serif;
+        font-weight: 400;
+    }
+
    
 
     .hero-image{
-        margin-top: -70px;
+        margin-top: -0px;
         margin-right: -300px;
         overflow: hidden;
 
@@ -106,6 +121,15 @@
 }
 .features-text{
     padding-bottom: 50px;
+    font-weight: 300;
+}
+
+.features-text h1{
+    margin-bottom: 20px;
+}
+
+.features-text p{
+    margin-bottom: 50px;
 }
 
 .features-points{
@@ -117,7 +141,13 @@
 .feature{
     display: flex;
     flex-direction: column;
+    gap: 30px;
     
+}
+
+.feature img{
+    width: 80px;
+    height: 80px;
 }
 
 .articles{
@@ -127,14 +157,41 @@
     padding: 80px 280px;
 }
 
+.articles h1{
+    margin-bottom: 40px
+}
+
 .artic{
     display: flex;
+    gap: 150px;
 }
 
 .article{
     display: flex;
     flex-direction: column;
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 10px;
+    
+    width: 200px;
+
 }
+
+.article h4{
+    font-size: 12px;
+    padding: 10px 20px;
+}
+
+.article h3{
+    font-size: 18px;
+    padding: 14px;
+}
+
+.article p{
+    padding: 0px 15px;
+    font-size: 14px;
+    margin-bottom: 12px;
+}
+
 
 .footer{
     background-color: hsl(233, 26%, 24%);
@@ -144,21 +201,35 @@
     color: hsl(220, 16%, 96%);
 }
 
+.footer p{
+    margin-bottom: 20px;
+}
+
 .icons{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 20px;
+}
+
+.socials{
+    padding: 15px;
 }
 
 .footer-note{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 25px;
 }
 
 
 
-@media (max-width:375px) {
+/* @media (max-width:375px) {
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
 
     body{
         display: flex;
@@ -174,5 +245,48 @@
         display: flex;
         flex-direction: column;
     }
+
+    .hero-copy{
+        order: 2;
+        padding: 0%;
+    }
     
+    .features{
+        display: flex;
+        flex-direction: column;
+    }
+    .features-points{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .articles{
+        display: flex;
+        flex-direction: column;
+        padding: 0%;
+    }
+    .artic{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer{
+        display: flex;
+        flex-direction: column;
+    }
+
+
+
+
+
+
+
+
+
+
+
 }
+
+
+ */
