--- a/style.css
+++ b/style.css
@@ -103,7 +103,8 @@
 
     }
 
-    .image-two{
+    .image-one{
+        display: none;
         
    
     
@@ -225,10 +226,16 @@
 
 
 
-/* @media (max-width:375px) {
+@media (max-width:375px) {
     *{
         margin: 0%;
         padding: 0%;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        max-width: 375px;
     }
 
     body{
@@ -244,37 +251,98 @@
 
         display: flex;
         flex-direction: column;
+        padding: 0px 30px;
+    }
+
+    .hero-image{
+        margin: 0%;
     }
 
     .hero-copy{
         order: 2;
-        padding: 0%;
+        padding: 0px;
+        margin: 0%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .image-one{
+        display: block;
+        margin: 0%;
+    }
+
+    .image-two{
+        display: none;
     }
     
     .features{
         display: flex;
         flex-direction: column;
+        padding: 30px;
     }
     .features-points{
         display: flex;
         flex-direction: column;
+        
         padding: 0;
+    }
+
+    .feature{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .articles{
         display: flex;
         flex-direction: column;
         padding: 0%;
+        align-items: center;
+        justify-content: center;
     }
     .artic{
         display: flex;
         flex-direction: column;
+        gap: 30px;
+    }
+
+    .article{
+        width: 320px;
+    }
+
+    .article img{
+        width: 320px;
+        height: 200px;
     }
 
     .footer{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 30px 100px;
     }
+
+    .icons{
+
+
+    }
+
+    .footer p{
+        text-align: center;
+
+    }
+
+    .footer-note .req-btn{
+        justify-content: center;
+        align-items: center;
+
+    }
+
+
+
 
 
 
@@ -289,4 +357,4 @@
 }
 
 
- */
+
